--- a/software.html
+++ b/software.html
@@ -39,8 +39,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://kiperformance.join.com/jobs/466532-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oUYQ6fwy&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=n2blpMwe'> HHB Systems Careers - Perl and Python Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://kiperformance.join.com/jobs/466532-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
+<p><span class="badge badge-light">Cologne Cologne, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/servicenow/job/o6Crbfw4'>ServiceNow Careers - Senior Software Engineer</a></h5> 
@@ -55,7 +59,7 @@
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://sintratec.join.com/jobs/454869-software-developer-java'>Job @ Sintratec (Brugg): Software Developer Java | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sintratec.join.com/jobs/454869-software-developer-java'>Job @ Sintratec (Brugg): Software Developer Java | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -63,7 +67,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o8PH9fwx&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nq7kpMwx'>Guidewire Software, Inc. Careers - Software Engineer Graduate - Krakow, Poland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o8PH9fwx&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nq7kpMwx'>Guidewire Software, Inc. Careers - Software Engineer Graduate - Krakow, Poland</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -137,7 +141,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -217,7 +221,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -437,11 +441,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/s6eztuke17gbioqthfcuxr7aqr'>Software Engineer III | Current Openings</a></h5> 
-<p><span class="badge badge-light">Redmond, WAUnited States  Redmond, WA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
