--- a/frontend.html
+++ b/frontend.html
@@ -38,7 +38,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
+<h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -60,7 +64,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/senior-front-end-developer---identity-1526176/?gh_src=82a8057f1'>Senior Front End Developer - Identity | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/senior-front-end-developer---identity-1526176/?gh_src=82a8057f1'>Senior Front End Developer - Identity | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/castlegroup/job/oaGrbfwc'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oaGrbfwc'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +158,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -166,11 +170,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -268,7 +272,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -308,11 +312,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/dental-intelligence-looking-for-front-end-developer/'>Dental Intelligence looking for Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/dental-intelligence-looking-for-front-end-developer/'>Dental Intelligence looking for Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -324,7 +328,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,11 +382,11 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -449,7 +453,7 @@
 <p>Oct 22, 2019 ... Description. InsideSales.com offers the sales industry's first comprehensive sales 
 acceleration platform that creates high performance sales teams with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5450?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Frontend Engineer - Shipwell  | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5450?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Frontend Engineer - Shipwell  | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -460,11 +464,6 @@ acceleration platform that creates high performance sales teams with?...</p>
 <h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://flyhtaerospace.applytojob.com/apply/odykVbvSAr/Front-End-Developer'>Front End Developer - FLYHT Aerospace - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 15, 2019 ... FLYHT is looking for a passionate and creative Front-End Developer to join the 
-Enterprise Software team in building highly interactive, intuitive and responsive?...</p>
 <hr/>
 
 
